[tool.poetry]
name = "fwstrap"
version = "0.1.0"
description = "The python script that bootstraps a Firework image"
authors = ["VisualDevelopment"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
